--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "^0.20.5",
@@ -21,8 +22,8 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
-    "react-native-svg": "13.9.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
